corrected colors and spacing, minor updates to html, incl structural update to header

--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,41 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+
+}
+.header{
+    display: flex;
+    flex-direction: column;
+    background-color: cornflowerblue;
+    color: white;
+    padding: 5% 7% 5% 7%;
     
 }
 
 .name{
-    background-color: cornflowerblue;
-    color: white;
-    padding:6% 0px 6% 7%;
-    font-size: 300%;
-    font-variant:small-caps;       
+    font-size: 310%;
+    font-variant-caps: all-petite-caps;
+ 
+}
+
+.contact{
+    display: flex;
+    
+    
+}
+
+.contact p{
+    margin-right: 2%;
+    font-size: 18px;
+
 }
 
 .section{
     display:flex;
     flex-direction: column;
-    padding-bottom:2%;
+    padding-bottom:1%;
+
 }
 
 h2{
@@ -25,14 +45,14 @@ h2{
     background-color: rgb(80, 80, 80);
     color: white;
     margin: 0.6% 0 0.2%;
-    font-size: 170%;
-    font-variant:small-caps;
+    font-size: 180%;
+    font-variant-caps: all-petite-caps;
+    
 }
 
 h3{
-    min-width: 400px;
     font-size: 135%;
-    margin-top: 1%;
+    
 }
 
 .instline .date,
@@ -41,23 +61,34 @@ h3{
     font-size: 99%;
 }
 
+.instline {
+    background-color: rgb(165, 165, 165);
+    
+}
+
+.posline{
+    background-color:rgb(212, 212, 212);
+    
+}
+
 .posline,
 .contents{
     margin-top: 0.7%;
 }
+
 .pos{
     font-weight: bold;
 }
 
-
 .lists,.contents,.instline,
 .posline{
-    padding:0 7% 0;
+    padding:1% 7% ;
     text-align: justify;
+    margin: 0.2% 0;
 }
 
 ol,ul{
-    margin-top: 2%;
+    margin:0.1% 0;
 }
 .lists{
     padding-right: 0;
